# harmorp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: accuracy_bench.rs  compare_bench.rs  stemmer_bench.rs
docs/: accuracy_comparison.md  algorithm.md  api.md  benchmark_comparison.md  performance.md
examples/: check.rs
src/: lib.rs
tests/: accuracy_test.rs  integration_test.rs
tests/data/: README.md  accuracy_test.json  be_te_se_prefixes.json  complex_forms.json  derivational_suffixes.json  edge_cases.json  inflectional_suffixes.json  me_prefixes.json  pe_prefixes.json
